unpackaged/main/default/objects/On_Off_Boarding__c/On_Off_Boarding__c.object-meta.xml
<CustomObject>
    <description>this is for the on boarding and off-boarding of New/Terminated Employees</description>
    <label>On/Off Boarding</label>
    <nameField>
        <displayFormat>OB-{0000000000}</displayFormat>
        <label>On/Off Boarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On/Off Boarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>