unpackaged/main/default/objects/On_Off_Boarding__c/fields/AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfo__c</fullName>
    <label>AdditionalInfo</label>
    <type>TextArea</type>
</CustomField>