unpackaged/main/default/objects/On_Off_Boarding__c/fields/Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>Alt_Email__c</fullName>
    <description>alternate email</description>
    <label>Alt Email</label>
    <type>Email</type>
</CustomField>