unpackaged/main/default/objects/On_Off_Boarding__c/fields/Assets_Required__c.field-meta.xml
<CustomField>
    <fullName>Assets_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assets Required</label>
    <type>Checkbox</type>
</CustomField>