unpackaged/main/default/objects/On_Off_Boarding__c/fields/Ball_in_Court__c.field-meta.xml
<CustomField>
    <fullName>Ball_in_Court__c</fullName>
    <label>Ball in Court</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JDE</fullName>
                <label>1 JDE</label>
            </value>
            <value>
                <fullName>Resource Planning</fullName>
                <label>2 Resource Planning</label>
            </value>
            <value>
                <fullName>Billflex</fullName>
                <label>3 Billflex</label>
            </value>
            <value>
                <fullName>FSL</fullName>
                <label>4 FSL</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>5 Pending</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <label>6 Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>