unpackaged/main/default/objects/On_Off_Boarding__c/fields/BillFlex_Action__c.field-meta.xml
<CustomField>
    <fullName>BillFlex_Action__c</fullName>
    <label>BillFlex Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create New Account</fullName>
            </value>
            <value>
                <fullName>Remove Access</fullName>
            </value>
            <value>
                <fullName>Update Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>