unpackaged/main/default/objects/On_Off_Boarding__c/fields/BillFlex_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>BillFlex_Completed_Date__c</fullName>
    <label>BillFlex Completed Date</label>
    <type>Date</type>
</CustomField>