unpackaged/main/default/objects/On_Off_Boarding__c/fields/Billflex_State__c.field-meta.xml
<CustomField>
    <fullName>Billflex_State__c</fullName>
    <label>Billflex State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>De-Activated</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Re-Activated</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>