unpackaged/main/default/objects/On_Off_Boarding__c/fields/Blue_Training__c.field-meta.xml
<CustomField>
    <fullName>Blue_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue Training</label>
    <type>Checkbox</type>
</CustomField>