unpackaged/main/default/objects/On_Off_Boarding__c/fields/BT_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>BT_Completion_Date__c</fullName>
    <label>BT Completion Date</label>
    <type>Date</type>
</CustomField>