unpackaged/main/default/objects/On_Off_Boarding__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5038000-BIR National OH</fullName>
            </value>
            <value>
                <fullName>5038200-FLM National OH</fullName>
            </value>
            <value>
                <fullName>5047001-217-Kentucky FLM</fullName>
            </value>
            <value>
                <fullName>5016100-111-Telus BC</fullName>
            </value>
            <value>
                <fullName>5016200-111-Telus AB</fullName>
            </value>
            <value>
                <fullName>5026001-111-AB</fullName>
            </value>
            <value>
                <fullName>5026002-111-BC</fullName>
            </value>
            <value>
                <fullName>5026003-111-SK</fullName>
            </value>
            <value>
                <fullName>5026004-111-MB</fullName>
            </value>
            <value>
                <fullName>5026005-111-ON</fullName>
            </value>
            <value>
                <fullName>5026006-111-QC</fullName>
            </value>
            <value>
                <fullName>5026007-111-NL</fullName>
            </value>
            <value>
                <fullName>5026008-111-NB</fullName>
            </value>
            <value>
                <fullName>5026009-111-NS</fullName>
            </value>
            <value>
                <fullName>5026013-111-PE</fullName>
            </value>
            <value>
                <fullName>5017010</fullName>
                <isActive>false</isActive>
                <label>5017010</label>
            </value>
            <value>
                <fullName>5019100-112-Falcon Drops Admin</fullName>
                <isActive>false</isActive>
                <label>5019100-112-Falcon Drops Admin</label>
            </value>
            <value>
                <fullName>5019176-111-FIN Drops</fullName>
                <isActive>false</isActive>
                <label>5019176-111-FIN Drops</label>
            </value>
            <value>
                <fullName>5025007</fullName>
                <isActive>false</isActive>
                <label>5025007</label>
            </value>
            <value>
                <fullName>5026041-111-BFS Multi Utility Locates</fullName>
                <isActive>false</isActive>
                <label>5026041-111-BFS Multi Utility Locates</label>
            </value>
            <value>
                <fullName>5031005</fullName>
                <isActive>false</isActive>
                <label>5031005</label>
            </value>
            <value>
                <fullName>5032005</fullName>
                <isActive>false</isActive>
                <label>5032005</label>
            </value>
            <value>
                <fullName>5038001</fullName>
                <isActive>false</isActive>
                <label>5038001</label>
            </value>
            <value>
                <fullName>5038002</fullName>
                <isActive>false</isActive>
                <label>5038002</label>
            </value>
            <value>
                <fullName>5038003</fullName>
                <isActive>false</isActive>
                <label>5038003</label>
            </value>
            <value>
                <fullName>5038004-210-BIR OH-N_WEST</fullName>
                <isActive>false</isActive>
                <label>5038004-210-BIR OH-N_WEST</label>
            </value>
            <value>
                <fullName>5038005-210-BIR OH-N_CENT</fullName>
                <isActive>false</isActive>
                <label>5038005-210-BIR OH-N_CENT</label>
            </value>
            <value>
                <fullName>5038006-210-BIR OH-N_EAST</fullName>
                <isActive>false</isActive>
                <label>5038006-210-BIR OH-N_EAST</label>
            </value>
            <value>
                <fullName>5038007-210-BIR OH-S_WEST</fullName>
                <isActive>false</isActive>
                <label>5038007-210-BIR OH-S_WEST</label>
            </value>
            <value>
                <fullName>5038008-210-BIR OH-S_CENT</fullName>
                <isActive>false</isActive>
                <label>5038008-210-BIR OH-S_CENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>