unpackaged/main/default/objects/On_Off_Boarding__c/fields/CDN_BFS_POINT_of_PRESENCE__c.field-meta.xml
<CustomField>
    <fullName>CDN_BFS_POINT_of_PRESENCE__c</fullName>
    <label>CDN BFS POINT of PRESENCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BARRIE ON POP</fullName>
            </value>
            <value>
                <fullName>BELLEVILLE ON POP</fullName>
            </value>
            <value>
                <fullName>BRANDON MB POP</fullName>
            </value>
            <value>
                <fullName>CALGARY AB POP</fullName>
            </value>
            <value>
                <fullName>CHICOUTIMI QC POP</fullName>
            </value>
            <value>
                <fullName>EDMONTON AB POP</fullName>
            </value>
            <value>
                <fullName>FORT MCMURRAY AB POP</fullName>
            </value>
            <value>
                <fullName>FREDERICTON NB POP</fullName>
            </value>
            <value>
                <fullName>GANDER NL POP</fullName>
            </value>
            <value>
                <fullName>HALIFAX NS POP</fullName>
            </value>
            <value>
                <fullName>HAMILTON ON POP</fullName>
            </value>
            <value>
                <fullName>KAMLOOPS BC POP</fullName>
            </value>
            <value>
                <fullName>KELOWNA BC POP</fullName>
            </value>
            <value>
                <fullName>KIRKLAND LAKE ON POP</fullName>
            </value>
            <value>
                <fullName>LONDON ON POP</fullName>
            </value>
            <value>
                <fullName>MEDICINE HAT AB POP</fullName>
            </value>
            <value>
                <fullName>MONCTON NB POP</fullName>
            </value>
            <value>
                <fullName>MONTRÉAL QC POP</fullName>
            </value>
            <value>
                <fullName>OTTAWA ON POP</fullName>
            </value>
            <value>
                <fullName>QUEBEC CITY QC POP</fullName>
            </value>
            <value>
                <fullName>REGINA SK POP</fullName>
            </value>
            <value>
                <fullName>SASKATOON SK POP</fullName>
            </value>
            <value>
                <fullName>ST. JOHN&#39;S NL POP</fullName>
            </value>
            <value>
                <fullName>SUDBURY ON POP</fullName>
            </value>
            <value>
                <fullName>THUNDER BAY ON POP</fullName>
            </value>
            <value>
                <fullName>TORONTO ON POP</fullName>
            </value>
            <value>
                <fullName>VANCOUVER BC POP</fullName>
            </value>
            <value>
                <fullName>VICTORIA BC POP</fullName>
            </value>
            <value>
                <fullName>WINDSOR ON POP</fullName>
            </value>
            <value>
                <fullName>WINNIPEG MB POP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>