unpackaged/main/default/objects/On_Off_Boarding__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WORK MARKET INC.</fullName>
                <default>true</default>
                <label>WORK MARKET INC.</label>
            </value>
            <value>
                <fullName>(EFT)PROTEL INDUSTRIES LTD.</fullName>
            </value>
            <value>
                <fullName>(EFT)RD UTILITY LOCATING SERVICE</fullName>
            </value>
            <value>
                <fullName>(EFT)VIDEOSAT ELECTRONICS INC.</fullName>
            </value>
            <value>
                <fullName>2059605 ALBERTA LTD</fullName>
            </value>
            <value>
                <fullName>COSERVE GLOBAL SOLUTIONS, LLC</fullName>
            </value>
            <value>
                <fullName>E-RAVEN CONSULTING INC.</fullName>
            </value>
            <value>
                <fullName>FIELD NATION LLC</fullName>
            </value>
            <value>
                <fullName>GCI COMMUNICATION CORP.</fullName>
            </value>
            <value>
                <fullName>GENUENT GLOBAL, LLC</fullName>
            </value>
            <value>
                <fullName>GOBALASINGHAM, NEETH</fullName>
            </value>
            <value>
                <fullName>INSPYR SOLUTIONS LLC</fullName>
            </value>
            <value>
                <fullName>MARKANDU, THUSEETHARAN</fullName>
            </value>
            <value>
                <fullName>METE, PASQUALE (PAT)</fullName>
            </value>
            <value>
                <fullName>POZIT TECHNOLOGIES INC.</fullName>
            </value>
            <value>
                <fullName>SCANPLUS LOCATING LTD.</fullName>
            </value>
            <value>
                <fullName>SINGH, SUKHCHAIN</fullName>
            </value>
            <value>
                <fullName>WESTPOINT TELECOMMUNICATIONS I</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>