unpackaged/main/default/objects/On_Off_Boarding__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>FSL Completed</label>
    <type>Date</type>
</CustomField>