unpackaged/main/default/objects/On_Off_Boarding__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <label>Contract ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business IR CAN</fullName>
            </value>
            <value>
                <fullName>Business IR USA</fullName>
            </value>
            <value>
                <fullName>FLM CAN</fullName>
            </value>
            <value>
                <fullName>FLM USA</fullName>
            </value>
            <value>
                <fullName>Warehouse USA</fullName>
            </value>
            <value>
                <fullName>Warehouse CAN</fullName>
            </value>
            <value>
                <fullName>EF&amp;I</fullName>
                <isActive>false</isActive>
                <label>EF&amp;I</label>
            </value>
            <value>
                <fullName>Falcon</fullName>
                <isActive>false</isActive>
                <label>Falcon</label>
            </value>
            <value>
                <fullName>Outside Build</fullName>
                <isActive>false</isActive>
                <label>Outside Build</label>
            </value>
            <value>
                <fullName>Select item 4</fullName>
                <isActive>false</isActive>
                <label>Select item 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>