unpackaged/main/default/objects/On_Off_Boarding__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Telus</fullName>
            </value>
            <value>
                <fullName>Tier2</fullName>
            </value>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Deactivate</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>