unpackaged/main/default/objects/On_Off_Boarding__c/fields/Eligible_State_Prov__c.field-meta.xml
<CustomField>
    <fullName>Eligible_State_Prov__c</fullName>
    <label>Eligible State/Prov</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Territory</valueSetName>
    </valueSet>
</CustomField>