unpackaged/main/default/objects/On_Off_Boarding__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>