unpackaged/main/default/objects/On_Off_Boarding__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>