unpackaged/main/default/objects/On_Off_Boarding__c/fields/FSL_BillFlex_Username__c.field-meta.xml
<CustomField>
    <fullName>FSL_BillFlex_Username__c</fullName>
    <label>FSL/BillFlex Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>