unpackaged/main/default/objects/On_Off_Boarding__c/fields/FSL_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL_Resource_Type__c</fullName>
    <label>FSL Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resource_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ledcor</fullName>
            </value>
            <value>
                <fullName>Ledcor - BTV</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Contractor - BTV</fullName>
            </value>
            <value>
                <fullName>Contractor - EFI</fullName>
                <isActive>false</isActive>
                <label>Contractor - EFI</label>
            </value>
            <value>
                <fullName>Contractor - Falcon</fullName>
                <isActive>false</isActive>
                <label>Contractor - Falcon</label>
            </value>
            <value>
                <fullName>Contractor - Manual</fullName>
                <isActive>false</isActive>
                <label>Contractor - Manual</label>
            </value>
            <value>
                <fullName>Contractor - Rogers Drops</fullName>
                <isActive>false</isActive>
                <label>Contractor - Rogers Drops</label>
            </value>
            <value>
                <fullName>Ledcor - EFI</fullName>
                <isActive>false</isActive>
                <label>Ledcor - EFI</label>
            </value>
            <value>
                <fullName>Ledcor - Falcon</fullName>
                <isActive>false</isActive>
                <label>Ledcor - Falcon</label>
            </value>
            <value>
                <fullName>Ledcor - Manual</fullName>
                <isActive>false</isActive>
                <label>Ledcor - Manual</label>
            </value>
            <value>
                <fullName>Ledcor - Rogers Drops</fullName>
                <isActive>false</isActive>
                <label>Ledcor - Rogers Drops</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>