unpackaged/main/default/objects/On_Off_Boarding__c/fields/FSL_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>FSL_TimeZone__c</fullName>
    <label>FSL TimeZone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State_Prov__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/El_Salvador</fullName>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/St_Johns</fullName>
            </value>
            <value>
                <fullName>Pacific/Honolulu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>