unpackaged/main/default/objects/On_Off_Boarding__c/fields/FSL_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>FSL_Training_Completed__c</fullName>
    <label>FSL Training Completed</label>
    <type>Date</type>
</CustomField>