unpackaged/main/default/objects/On_Off_Boarding__c/fields/FSL_Training_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FSL_Training_Scheduled_Date__c</fullName>
    <label>FSL Training Scheduled Date</label>
    <type>Date</type>
</CustomField>