unpackaged/main/default/objects/On_Off_Boarding__c/fields/FSL_Username__c.field-meta.xml
<CustomField>
    <fullName>FSL_Username__c</fullName>
    <label>FSL Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>