unpackaged/main/default/objects/On_Off_Boarding__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>Last_Name__c &amp; &quot;, &quot; &amp;  First_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>