unpackaged/main/default/objects/On_Off_Boarding__c/fields/Hands_on_Session__c.field-meta.xml
<CustomField>
    <fullName>Hands_on_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hands-on Session</label>
    <type>Checkbox</type>
</CustomField>