unpackaged/main/default/objects/On_Off_Boarding__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <label>Hiring Manager</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Al-Bess, Omar - 1135639</fullName>
            </value>
            <value>
                <fullName>Ardelean Jr, Frank P - 1076759</fullName>
            </value>
            <value>
                <fullName>Arient, Jonathan -122877</fullName>
            </value>
            <value>
                <fullName>Bains, Rajdeep-462370</fullName>
            </value>
            <value>
                <fullName>Blake, Robert D-1139325</fullName>
            </value>
            <value>
                <fullName>Ellis, Joseph A - 1112502</fullName>
            </value>
            <value>
                <fullName>Flores, Jose Luis - 3012407</fullName>
            </value>
            <value>
                <fullName>Frank P Ardelean Jr</fullName>
            </value>
            <value>
                <fullName>Frisch, Alexander S - 1139604</fullName>
            </value>
            <value>
                <fullName>Jaques, Jeremy - 3011506</fullName>
            </value>
            <value>
                <fullName>Jones, Dameond - 3001928</fullName>
            </value>
            <value>
                <fullName>Martin, Gordon - 3030224</fullName>
            </value>
            <value>
                <fullName>Miller, Robert D - 1097109</fullName>
            </value>
            <value>
                <fullName>Morgan, Daniel - 3008831</fullName>
            </value>
            <value>
                <fullName>Narwal, Manoz - 1097538</fullName>
            </value>
            <value>
                <fullName>Nelson, Chris - 3012591</fullName>
            </value>
            <value>
                <fullName>Nguyen, Danny - 627527</fullName>
            </value>
            <value>
                <fullName>Rochelle, Michael A - 1153979</fullName>
            </value>
            <value>
                <fullName>Singh, Jagpreet-3002947</fullName>
            </value>
            <value>
                <fullName>Solis, Joel - 1073129</fullName>
            </value>
            <value>
                <fullName>Soueid, Talaat M-1071009</fullName>
            </value>
            <value>
                <fullName>Swogger, Brian L - 341364</fullName>
            </value>
            <value>
                <fullName>Young, Jonathon - 3016102</fullName>
            </value>
            <value>
                <fullName>Blake, Nicholas R-1154834</fullName>
                <isActive>false</isActive>
                <label>Blake, Nicholas R-1154834</label>
            </value>
            <value>
                <fullName>Carr, Bradley J-1161785</fullName>
                <isActive>false</isActive>
                <label>Carr, Bradley J-1161785</label>
            </value>
            <value>
                <fullName>Flowers, Lawrence - 1106772</fullName>
                <isActive>false</isActive>
                <label>Flowers, Lawrence - 1106772</label>
            </value>
            <value>
                <fullName>Harder, Glen A-1157992</fullName>
                <isActive>false</isActive>
                <label>Harder, Glen A-1157992</label>
            </value>
            <value>
                <fullName>Terrell, Richard - 1088227</fullName>
                <isActive>false</isActive>
                <label>Terrell, Richard - 1088227</label>
            </value>
            <value>
                <fullName>Ulloa, Michael A-1072928</fullName>
                <isActive>false</isActive>
                <label>Ulloa, Michael A-1072928</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>