unpackaged/main/default/objects/On_Off_Boarding__c/fields/HO_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>HO_Completed_Date__c</fullName>
    <label>HO Completed Date</label>
    <type>Date</type>
</CustomField>