unpackaged/main/default/objects/On_Off_Boarding__c/fields/JasperSoft__c.field-meta.xml
<CustomField>
    <fullName>JasperSoft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JasperSoft</label>
    <type>Checkbox</type>
</CustomField>