unpackaged/main/default/objects/On_Off_Boarding__c/fields/JDE__c.field-meta.xml
<CustomField>
    <fullName>JDE__c</fullName>
    <label>JDE-S/WM Attributes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>