unpackaged/main/default/objects/On_Off_Boarding__c/fields/JDE_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>JDE_Completed_Date__c</fullName>
    <label>JDE Completed Date</label>
    <type>Date</type>
</CustomField>