unpackaged/main/default/objects/On_Off_Boarding__c/fields/LOC_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>LOC_Supervisor__c</fullName>
    <defaultValue>$User.ManagerId</defaultValue>
    <label>LOC Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Herbert, Jason</fullName>
            </value>
            <value>
                <fullName>Williams, Lindsay</fullName>
            </value>
            <value>
                <fullName>Cannon, Christopher</fullName>
            </value>
            <value>
                <fullName>Lane, Thomas</fullName>
            </value>
            <value>
                <fullName>Jovanovic, Tamara</fullName>
            </value>
            <value>
                <fullName>Martinelli, Laura</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>