unpackaged/main/default/objects/On_Off_Boarding__c/fields/LOC_Team__c.field-meta.xml
<CustomField>
    <fullName>LOC_Team__c</fullName>
    <defaultValue>$User.Division</defaultValue>
    <description>Division in User</description>
    <label>LOC Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSC - Austin</fullName>
            </value>
            <value>
                <fullName>CSC - Port Moody</fullName>
            </value>
            <value>
                <fullName>CSC - Vancouver</fullName>
            </value>
            <value>
                <fullName>PMO - Austin</fullName>
            </value>
            <value>
                <fullName>PMO - Port Moody</fullName>
            </value>
            <value>
                <fullName>PMO - Vancouver</fullName>
            </value>
            <value>
                <fullName>STM Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>